--- a/doc/src/components/theme.module.scss
+++ b/doc/src/components/theme.module.scss
@@ -25,3 +25,7 @@
 :local(.leftContent) {
   padding-left: 0.5rem;
 }
+
+:local(.defaultColor) {
+  background-color: rgba(0,0,0,0);
+}
