--- a/doc/src/pages/index.scss
+++ b/doc/src/pages/index.scss
@@ -4,12 +4,9 @@ body {
     font-family: 'Roboto';
     overflow-x: hidden;
 }
-
-.navbar-transparent {
-  background: transparent;
+.navbar-animated {
   box-shadow: none;
 }
-
 .hero-container {
     display: flex;
     width: 100%;
